Adding Nav links to projects

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 		
 		<header>
 			<div class="inner-column">
-			<h1> Shaik's base-setup project</h1>
+			<nav>
+				<a href="portal/index.html">Portal</a>
+				<a href="mock-site-prototype/index.html">Come to you Prototype</a>
+				<a href="mock-site/index.html">Come to you</a>
+			</nav>
 			</div>
 		</header>
 
