--- a/boiler-plate/index.html
+++ b/boiler-plate/index.html
@@ -12,7 +12,7 @@
 
 		<meta property='og:image' content='images/default-meta.png'>
 
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="styles/style.css">
 
 	</head>
 
