Added link to new project

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<a href="portal/index.html">Portal</a>
 				<a href="mock-site-prototype/index.html">Come to you Prototype</a>
 				<a href="mock-site/index.html">Come to you</a>
+				<a href="layout-garden/index.html"> Layout Garden</a>
 			</nav>
 			</div>
 		</header>
