--- a/projects/layout-garden/index.html
+++ b/projects/layout-garden/index.html
@@ -102,6 +102,129 @@
 	</div>
 </section>
 
+<section class="third">
+<div class="inner-column">	
+	<picture>
+		
+			
+
+		<img src="images/setup.jpeg" alt="">
+
+		
+	
+	</picture>
+
+	<div class="info-tom">
+		
+			
+		
+		<details>
+			<summary>The one and only. </summary>
+			<p>
+				In 1976, if you had told fourteen-year-old Franciscan seminary student Thomas Cruise Mapother IV that one day in the not too distant future he would be Tom Cruise, one of the top 100 movie stars of all time, he would have probably grinned and told you that his ambition was to join the priesthood. Nonetheless, this sensitive, deeply religious youngster who was born in 1962 in Syracuse, New York, was destined to become one of the highest paid and most sought after actors in screen history.
+			</p>
+		</details>
+
+		<details>
+			<summary>God-level</summary>
+			<p>
+				Tom is the only son (among four children) of nomadic parents, Mary Lee (Pfeiffer), a special education teacher, and Thomas Cruise Mapother III, an electrical engineer. His parents were both from Louisville, Kentucky, and he has German, Irish, and English ancestry. Young Tom spent his boyhood always on the move, and by the time he was 14 he had attended 15 different schools in the U.S. and Canada. He finally settled in Glen Ridge, New Jersey with his mother and her new husband. While in high school, Tom wanted to become a priest but pretty soon he developed an interest in acting and abandoned his plans of becoming a priest, dropped out of school, and at age 18 headed for New York and a possible acting career. The next 15 years of his life are the stuff of legends. He made his film debut with a small part in Endless Love (1981) and from the outset exhibited an undeniable box office appeal to both male and female audiences.
+			</p>
+
+
+		</details>
+
+		<details>
+				<summary>No one like him will ever be born again</summary>
+
+			<p>
+			
+				With handsome movie star looks and a charismatic smile, within 5 years Tom Cruise was starring in some of the top-grossing films of the 1980s including Top Gun (1986); The Color of Money (1986), Rain Man (1988) and Born on the Fourth of July (1989). By the 1990s he was one of the highest-paid actors in the world earning an average 15 million dollars a picture in such blockbuster hits as Interview with the Vampire: The Vampire Chronicles (1994), Mission: Impossible (1996) and Jerry Maguire (1996), for which he received an Academy Award Nomination for best actor. Tom Cruise's biggest franchise, Mission Impossible, has also earned a total of 3 billion dollars worldwide. Tom Cruise has also shown lots of interest in producing, with his biggest producer credits being the Mission Impossible franchise.
+			</p>
+		</details>
+
+		<details>
+			<summary>If I were a woman, I would blow him</summary>
+
+			<p>
+				In 1990 he renounced his devout Catholic beliefs and embraced The Church of Scientology claiming that Scientology teachings had cured him of the dyslexia that had plagued him all of his life. A kind and thoughtful man well known for his compassion and generosity, Tom Cruise is one of the best liked members of the movie community. He was married to actress Nicole Kidman until 2001. Thomas Cruise Mapother IV has indeed come a long way from the lonely wanderings of his youth to become one of the biggest movie stars ever.
+			</p>
+
+		</details>
+
+	</div>
+</div>
+
+</section>
+
+<section class="four">
+	<div class="inner-column">
+		<h2>Newest Offers and Innovations.</h2>
+		<nav>
+			<ul>
+				<li>
+					<a href="#">Recommended</a>
+				</li>
+
+				<li><a href="#">Mobile</a></li>
+
+				<li><a href="#">TV$AV</a></li>
+
+				<li><a href="#">Appliances</a></li>
+
+				<li><a href="#">Computing</a></li>
+
+				<li><a href="#">Memory</a></li>
+			</ul>
+		</nav>
+
+		<div class="item-list">
+			<div class="mobile">
+				<picture>
+					<img src="images/mobile.png" alt="">
+				</picture>
+				<h3>Limited time offer:$400 off eligible Galaxy S24 series.</h3>
+			</div>
+
+			
+			<ul>
+				<li class="dryer">
+					<picture>
+						<img src="images/dryer.png" alt="">
+					</picture>
+					<h3>Save $900 on Bespoke AI Laundry Combo.</h3>
+				</li>
+
+				<li class="tv">
+					
+						<picture>
+							<img src="images/tv.png" alt="">
+						</picture>
+						<h3>Save $400 on 75' Neo QLED 4k.</h3>
+
+				</li>
+
+				<li class="tab">
+						<picture>
+							<img src="images/tab.png" alt="">
+						</picture>
+						<h3>Save upto $400 on Galaxy Tab S9 Series.</h3>
+				</li>
+
+				<li class="potrait">
+						<picture>
+							<img src="images/frame.png" alt="">
+						</picture>
+						<h3>Get a Free 32" The Frame TV.</h3>
+				</li>
+			
+			</ul>
+			
+		</div>
+
+	</div>
+</section>
+
 </main>
 
 <footer>
